# adventure-text

./: CMakeLists.txt  Example.save  README.md  adv_game.cpp  adv_game.hpp  build.sh  enums.hpp  main_classes.hpp  main_enums.cpp  main_enums.hpp  main_functions.cpp  main_functions.hpp
Actions/: Actions.cpp  Actions.hpp  CMakeLists.txt
AdvPython/: AdvPython.cpp  AdvPython.hpp  CMakeLists.txt  character-parser.py  json-parser.py
AdvPython/testes/: json-parser.py  script.cpp  teste.py
AdvPython/testes/bak/: compile-example.txt  multiply.py
Adventures/: adventure-example.json
Adventures/Example/: Example.json
Characters/: CMakeLists.txt  Characters.cpp  Characters.hpp
Game/: CMakeLists.txt  Game.cpp  Game.hpp
Game/testes/: teste  teste.cpp
Items/: CMakeLists.txt  Items.cpp  Items.hpp
Scenes/: CMakeLists.txt  Scenes.cpp  Scenes.hpp
Screen/: CMakeLists.txt  Screen.cpp  Screen.hpp
